objects/Grid_ContractTeamMember__c.object
<CustomObject>
    <fields>
        <fullName>Grid_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Team Members</relationshipLabel>
        <relationshipName>Contract_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grid_TeamRole__c</fullName>
        <label>Team Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Representatives</fullName>
                </value>
                <value>
                    <fullName>KAM</fullName>
                </value>
                <value>
                    <fullName>Maketing Representatives</fullName>
                </value>
                <value>
                    <fullName>Client Manager</fullName>
                </value>
                <value>
                    <fullName>Delivery supervisor</fullName>
                </value>
                <value>
                    <fullName>Delivery Project Manager</fullName>
                </value>
                <value>
                    <fullName>Delivery SAP Specialist</fullName>
                </value>
                <value>
                    <fullName>Delivery Logistic Specialist</fullName>
                </value>
                <value>
                    <fullName>Delivery Supplier Specialist</fullName>
                </value>
                <value>
                    <fullName>Manufacturing SAP Specialist</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Supervisor</fullName>
                </value>
                <value>
                    <fullName>Operation Specialist</fullName>
                </value>
                <value>
                    <fullName>Contracting&amp;Plan Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grid_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract Team Member</label>
    <nameField>
        <label>Contract Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>